--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,17 +74,43 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+fonts:
+     - family: Schyler
+       fonts:
+        - asset: fonts/Schyler-Regular.ttf
+        - asset: fonts/Schyler-Italic.ttf
+          style: italic
+     - family: Trajan Pro
+       fonts:
+        - asset: fonts/TrajanPro.ttf
+        - asset: fonts/TrajanPro_Bold.ttf
+          weight: 700
+     - family: Roboto
+       fonts:
+         - asset: assets/fonts/Roboto-Regular.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Black.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-BlackItalic.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Bold.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-BoldItalic.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Italic.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Light.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Black.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Thin.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Thinitalic.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Medium.ttf
+           weight: 400
+         - asset: assets/fonts/Roboto-Mediumitalic.ttf
+           weight: 700
+  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
